--- a/src/test/resources/framework.properties
+++ b/src/test/resources/framework.properties
@@ -1,2 +1,10 @@
-browser.name=chrome
-chrome.driver.location= driver/chromedriver
+browser.name=firefox
+chrome.driver.location= drivers/chromedriver
+firefox.driver.location=drivers/geckodriver
+app.url = https://zoom.us/
+
+screenshot.pass.dir=target/screenshot/pass
+screenshot.fail.dir=target/screenshot/fail
+file.ts.format = yyyyMMdd_HHmmSS
+screenshot.ext = .png
+
