--- a/src/test/resources/framework.properties
+++ b/src/test/resources/framework.properties
@@ -1,4 +1,4 @@
-browser.name=firefox
+browser.name=chrome
 chrome.driver.location= drivers/chromedriver
 firefox.driver.location=drivers/geckodriver
 app.url = https://zoom.us/
