Added Logs and Excel data

--- a/src/test/resources/framework.properties
+++ b/src/test/resources/framework.properties
@@ -10,4 +10,7 @@ file.ts.format = yyyyMMdd_HHmmSS
 screenshot.ext = .png
 datafile.name = MasterData.xlsx
 datafile.location = /Users/atinsingh/Desktop
+excel.file.name = StudentsRecord.xlsx
+excel.file.location= /Users/agilaethiraj/Excel_Sheet
+
 
