--- a/src/test/resources/framework.properties
+++ b/src/test/resources/framework.properties
@@ -12,5 +12,6 @@ datafile.name = MasterData.xlsx
 datafile.location = /Users/atinsingh/Desktop
 excel.file.name = StudentsRecord.xlsx
 excel.file.location= /Users/agilaethiraj/Excel_Sheet
-
+report.location= target/reports
+report.file.nameprefix = TestRun
 
