Removed hardcoding values

--- a/src/test/resources/framework.properties
+++ b/src/test/resources/framework.properties
@@ -14,4 +14,10 @@ excel.file.name = StudentsRecord.xlsx
 excel.file.location= /Users/agilaethiraj/Excel_Sheet
 report.location= target/reports
 report.file.nameprefix = TestRun
+OS=macOS
+tester=Agila
+browser=chrome
+document.title=AutomationReport
+report.name=FunctionalReport
+HostName=LocalHost
 
